# uSum

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh  urls.example.txt
usum/: __init__.py  __main__.py  backends.py  cli.py  config.py  models.py  onenote.py  render.py  summarize.py  transcript.py
